force-app/main/default/objects/Task_Creation__c/Task_Creation__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>This custom setting will be used to store criteria for task creation on different objects.</description>
    <label>Task Creation</label>
</CustomObject>