force-app/main/default/objects/Task_Creation__c/fields/Additional_Criteria__c.field-meta.xml
<CustomField>
    <fullName>Additional_Criteria__c</fullName>
    <description>This field will be used to take additional text criteria that can be used to filter records.</description>
    <inlineHelpText>Examples include: RecordTypeId = &apos;01200000000012fTrA&apos;, or Type__c in (&apos;Client&apos;, &apos;Realtor&apos;), etc.</inlineHelpText>
    <label>Additional Criteria</label>
    <type>TextArea</type>
</CustomField>