force-app/main/default/objects/Task_Creation__c/fields/Date_Filter_Operator__c.field-meta.xml
<CustomField>
    <fullName>Date_Filter_Operator__c</fullName>
    <description>This field will hold the operator for the date filter (&lt;, &gt;, =, &lt;=, &gt;=).</description>
    <inlineHelpText>Filters based on the date and date filter fields. Values are &lt;, &gt;, =, &lt;=, &gt;=.</inlineHelpText>
    <label>Date Filter Operator</label>
    <length>2</length>
    <required>true</required>
    <type>Text</type>
</CustomField>