force-app/main/default/objects/Task_Creation__c/fields/Date_Range_Filter__c.field-meta.xml
<CustomField>
    <fullName>Date_Range_Filter__c</fullName>
    <description>This field will hold the date range filter for the field in the Field API Name text box.  0 is Today.</description>
    <inlineHelpText>Number of days from today (0 means today, 5 means 5 days from today, -5 means 5 days ago, etc).</inlineHelpText>
    <label>Date Range Filter</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>