force-app/main/default/objects/Task_Creation__c/fields/Due_In__c.field-meta.xml
<CustomField>
    <fullName>Due_In__c</fullName>
    <description>This field will hold what day the task should be due in. 0 = same day.</description>
    <inlineHelpText>Day this task is due. 0 = due the same day it is created.</inlineHelpText>
    <label>Due In</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>