force-app/main/default/objects/Task_Creation__c/fields/Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Field_API_Name__c</fullName>
    <description>This field will hold the API  name of the field that has a date in it.  That date will be compared against other criteria on this setting to determine if a task should be created.</description>
    <inlineHelpText>Date field on the object to compare against the date filter.</inlineHelpText>
    <label>Field API Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>