force-app/main/default/objects/Task_Creation__c/fields/Future_Activities_Check__c.field-meta.xml
<CustomField>
    <fullName>Future_Activities_Check__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This checkbox will be used to determine if a task should only be created if no future activities exist.</description>
    <inlineHelpText>Checked = Task will only be created if no future activities are present</inlineHelpText>
    <label>Future Activities Check</label>
    <type>Checkbox</type>
</CustomField>