force-app/main/default/objects/Task_Creation__c/fields/Object_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Object_API_Name__c</fullName>
    <description>This field will hold the API name of the object in the &apos;Related To&apos; (or What) portion of the Task.  Custom objects will end with __c.</description>
    <label>Object API Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>