force-app/main/default/objects/Task_Creation__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Object_API_Name__c</columns>
    <columns>Field_API_Name__c</columns>
    <columns>Task_Name__c</columns>
    <columns>Date_Range_Filter__c</columns>
    <columns>Date_Filter_Operator__c</columns>
    <columns>Due_In__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>